[package]
name = "lnx-distribute"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
rustls = { version = "*", features = ["quic", "dangerous_configuration"] }
hashbrown = { version = "0.11.2", features = ["serde"] }
sled = { version = "0.34.7", features = ["compression"] }

futures-util = "0.3.19"
bincode = "1.3.3"
tracing = "0.1.29"
async-raft = "0.6.1"
quinn = "0.8"
rcgen = "0.8"

anyhow = "1.0.22"
thiserror = "1.0.30"