[package]
name = "lnx-distribute"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lnx-utils = { path = "../lnx-utils" }

tokio = { version = "1", features = ["sync", "rt"] }
serde = { version = "1", features = ["derive"] }
rustls = { version = "*", features = ["quic", "dangerous_configuration"] }
sled = { version = "0.34.7", features = ["compression"] }
openraft = "0.6.4"

futures-util = "0.3.19"
bincode = "1.3.3"
tracing = "0.1.29"
tracing-futures = "0.2.5"
quinn = "0.8"
rcgen = "0.8"
parking_lot = "0.11.2"

anyhow = "1.0.22"
thiserror = "1.0.30"