[package]
name = "lnx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lnx-distribute = { path = "../lnx-distribute" }

tokio = { version = "1", features = ["full"] }

anyhow = "1"
tracing-subscriber = "0.3.6"
tracing = "0.1.29"
tracing-futures = "0.2.5"